# countdown-distillation-gemma

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: gold_stage.json  inference.json  teacher_engine.json  warm_start.json
docs/: architecture.md  experiment-log.md  methodology.md  results.md
notebooks/: 01_baseline_v1.ipynb  02_baseline_v2.ipynb  03_baseline_v3.ipynb  04_teacher_engine.ipynb  05_warm_start.ipynb  06_gold.ipynb  07_inference_submission.ipynb
prompts/: student_prompt.txt  teacher_prompt.txt
results/: baseline_v1_metrics.json  baseline_v2_metrics.json  baseline_v3_metrics.json  final_inference_summary.json  gold_round_00_metrics.json  gold_round_01_metrics.json  gold_round_02_metrics.json  warm_start_metrics.json
scripts/: run_gold_stage.sh  run_inference.sh  run_teacher_engine.sh  run_warm_start.sh
src/: __init__.py
src/data/: __init__.py  build_splits.py  load_countdown.py
src/eval/: __init__.py  error_analysis.py  metrics.py  verifier.py
src/inference/: __init__.py  generate.py  rank_candidates.py  submission.py
src/student/: __init__.py  gold_trainer.py  lora_utils.py  warm_start.py
src/teacher/: __init__.py  canonicalize.py  rejection_sampling.py  teacher_engine.py
src/utils/: io.py  seed.py
tests/: test_metrics.py  test_parser.py  test_verifier.py
