[project]
name = "countdown-distillation-gemma"
version = "0.1.0"
description = "Teacher-student Countdown distillation pipeline for Gemma 3 1B."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "datasets",
  "numpy",
  "pandas",
  "pyarrow",
  "scikit-learn",
  "sympy",
  "torch",
  "transformers",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
